# agent-rs

./: .gitignore  Cargo.toml  README.md  perf.data  perf.data.old
libs/prometheus-parser/: Cargo.toml  build.rs
libs/prometheus-parser/src/: lib.rs  line.rs
src/: main.rs  metrics_agent.rs  metrics_formatter.rs  remote_write.rs  scraper.rs
