[package]
name = "agent-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["libs/prometheus-parser"]

[dependencies]
indexmap = "2.12.1"
prometheus-parser = { path = "libs/prometheus-parser" }
reqwest = { version = "0.12.28", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1.44"
