[package]
name = "prometheus-parser"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>", "Duy Do <juchiast@gmail.com>"]
edition = "2024"
publish = false
license = "MPL-2.0"

[dependencies]
indexmap = { version = "2.11.0", default-features = false, features = ["serde", "std"] }
nom = { version = "8.0.0", default-features = false }
prost = { version = "0.12", default-features = false, features = ["std"] }
prost-types = { version = "0.12", default-features = false }
snafu = { version = "0.8.9", default-features = false, features = ["futures", "std"] }

[build-dependencies]
prost-build = { version = "0.12", default-features = false }
